ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: insurance-ingress
  namespace: backend
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 4200
          - path: /api/reference-data
            pathType: Prefix
            backend:
              service:
                name: referencedata-api
                port:
                  number: 8080
          - path: /api/policies
            pathType: Prefix
            backend:
              service:
                name: policies-api
                port:
                  number: 8080
          - path: /api/claims
            pathType: Prefix
            backend:
              service:
                name: claims-api
                port:
                  number: 8080
